modularize and refactor core functionality

--- a/src/nata-beats-gui/mainwindow.ui
+++ b/src/nata-beats-gui/mainwindow.ui
@@ -41,6 +41,26 @@
            </spacer>
           </item>
           <item>
+           <widget class="QLabel" name="label_5">
+            <property name="text">
+             <string>Volume</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QSlider" name="hs_volume">
+            <property name="maximum">
+             <number>100</number>
+            </property>
+            <property name="value">
+             <number>100</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="QPushButton" name="pb_configurePlayback">
             <property name="text">
              <string>Configure...</string>
