--- a/src/nata-beats-gui/controlconfig.ui
+++ b/src/nata-beats-gui/controlconfig.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>304</width>
-    <height>160</height>
+    <width>233</width>
+    <height>152</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -162,6 +162,46 @@
        </item>
        <item>
         <widget class="QPushButton" name="pb_clearEdit">
+         <property name="styleSheet">
+          <string notr="true">padding: 0.2em 0.5em;</string>
+         </property>
+         <property name="text">
+          <string>...</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>Volume Control</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <layout class="QHBoxLayout" name="horizontalLayout_4">
+       <property name="leftMargin">
+        <number>6</number>
+       </property>
+       <item>
+        <widget class="QLineEdit" name="le_volume">
+         <property name="font">
+          <font>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pb_volumeControl">
          <property name="styleSheet">
           <string notr="true">padding: 0.2em 0.5em;</string>
          </property>
